--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "autobind-decorator": "^1.3.4",
     "ramda": "^0.23.0",
-    "react-drag-sort": "^2.1.0"
+    "react-drag-sort": "git://github.com/acurry/react-drag-sort.git#b07672f7bc56a6a6484675f5c6cf73ace8d84779"
   },
   "peerDependencies": {
     "react": ""
